<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ Copyright (C) 2021 Alceatraz @ BlackTechStudio
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms from the BTS Anti-Commercial & GNU Affero General
  ~ Public License as published by the Free Software Foundation, either
  ~ version 3 from the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty from
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ BTS Anti-Commercial & GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy from the BTS Anti-Commercial & GNU Affero
  ~ General Public License along with this program.
  ~
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>studio.blacktech.furryblackplus</groupId>
  <artifactId>core</artifactId>

  <name>FurryBlack-Mirai-Core</name>

  <version>3.0.0</version>

  <packaging>jar</packaging>

  <properties>
    <mirai.version>2.15.0-M1</mirai.version>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.source>17</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <build>

    <finalName>furryblack</finalName>

    <plugins>


      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>

      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
      </plugin>

      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/library</outputDirectory>
              <overWriteIfNewer>true</overWriteIfNewer>
              <overWriteReleases>true</overWriteReleases>
              <overWriteSnapshots>true</overWriteSnapshots>
              <excludeArtifactIds>
                junit-jupiter,
                junit-jupiter-api,
                junit-jupiter-engine,
                junit-jupiter-params,
                junit-platform-engine,
                junit-platform-commons,
              </excludeArtifactIds>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>

  </build>

  <dependencies>

    <!-- https://mvnrepository.com/artifact/net.mamoe/mirai-core-api-jvm -->
    <dependency>
      <groupId>net.mamoe</groupId>
      <artifactId>mirai-core-api-jvm</artifactId>
      <version>${mirai.version}</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/net.mamoe/mirai-core-jvm -->
    <dependency>
      <groupId>net.mamoe</groupId>
      <artifactId>mirai-core-jvm</artifactId>
      <version>${mirai.version}</version>
      <scope>runtime</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/net.mamoe/mirai-core-utils-jvm -->
    <dependency>
      <groupId>net.mamoe</groupId>
      <artifactId>mirai-core-utils-jvm</artifactId>
      <version>${mirai.version}</version>
      <scope>runtime</scope>
      <type>pom</type>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.jline/jline -->
    <dependency>
      <groupId>org.jline</groupId>
      <artifactId>jline</artifactId>
      <version>3.23.0</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
    <dependency>
      <groupId>com.squareup.okhttp3</groupId>
      <artifactId>okhttp</artifactId>
      <version>4.10.0</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.36</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.9.2</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

</project>
